--- a/src/app/skillset/skillset.html
+++ b/src/app/skillset/skillset.html
@@ -2,7 +2,7 @@
     <h2 class="title">{{ myData.DATA.skillSet.title.values[myData.DATA.language] }}</h2>
     <div class="skills">
         <div *ngFor="let skill of myData.DATA.skillSet.skills.values; let i = index">
-            <div class="{{skill.name === 'Growth Mindset' ? 'growMindset' : 'skill'}}">
+            <div class="{{skill.name === 'Growth Mindset' ? 'growMindset' : 'skill'}}" (click)="setFocus()">
                 <img [src]="'ico/' + skill.icon" [alt]="skill.name" />
                 <p>{{ skill.name }} </p>
             </div>
