--- a/src/app/mywork/mywork.scss
+++ b/src/app/mywork/mywork.scss
@@ -1,1 +1,20 @@
-*{z-index: 99;}
+    .main {
+        border: 1px solid red;
+        //position: absolute;
+        //top: 1163px;
+        //left: 50%;
+        //transform: translate(-50%, 0%);
+
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+        gap: 40px;
+        width: 100%;
+        height: 407px;
+        max-width: 1440px;
+        margin-left: auto;
+        margin-right: auto;
+        background-color: transparent;
+        box-sizing: border-box;
+        z-index: 1;
+    }
