--- a/src/app/mywork/mywork.html
+++ b/src/app/mywork/mywork.html
@@ -1,4 +1,15 @@
-<div class="main">
-    <p>mywork works!</p>
+<div class="myWork">
+    <div class="myWorkHeader">
+        <div class="ball4"></div>
+        <div class="ball5"></div>
+    </div>
+    <div class="myWorkMain">
+        <div class="ball6"></div>
+        <div class="ball7"></div>
+        <div class="ball8"></div>
+        <div class="ball9"></div>
+        <div class="ball10"></div>
+    </div>
+
 
 </div>
