--- a/src/app/mywork/mywork.scss
+++ b/src/app/mywork/mywork.scss
@@ -1,20 +1,160 @@
-    .main {
-        border: 1px solid red;
-        //position: absolute;
-        //top: 1163px;
-        //left: 50%;
-        //transform: translate(-50%, 0%);
+$screenWidth: 1440px;
+$skillSetTop: 1697px;
+$skillSetHeight: 632px;
+$myWorkTop: calc($skillSetHeight + $skillSetTop);
+$myWorkBall4Top: calc(66px); //calc(2395px - #{$myWorkTop}); //bei $screenWidth: 1440px;
+$myWorkBall5Top: calc(186px); //calc(25155px - #{$myWorkTop}); //bei $screenWidth: 1440px;
+$myWorkHeaderHeight: calc($myWorkBall5Top + 183px);
+$myWorkMainTop: calc($myWorkHeaderHeight);
+$myWorkMainHeight: calc(1985px);
+$myWorkHeight: calc($myWorkHeaderHeight + $myWorkMainHeight);
 
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-        gap: 40px;
-        width: 100%;
-        height: 407px;
-        max-width: 1440px;
+
+
+.myWork {
+    border: 1px solid rgb(0, 255, 72);
+    position: absolute;
+    top: $myWorkTop;
+    left: 50%;
+    transform: translate(-50%, 0%);
+
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 40px;
+    height: $myWorkHeight;
+    max-width: 1440px;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: transparent;
+    box-sizing: border-box;
+    z-index: 1;
+    overflow: hidden;
+
+
+    >.myWorkHeader {
+        border: 1px solid black;
+        position: absolute;
+        box-sizing: border-box;
+        top: 0px;
+        left: 50%;
+        transform: translate(-50%, 0%);
+        height: 100%;
+        width: 1440px;
+        max-width: 100%;
         margin-left: auto;
         margin-right: auto;
         background-color: transparent;
-        box-sizing: border-box;
-        z-index: 1;
+
+
+        >.ball4 {
+            $heightBall4: 108.75px;
+            position: absolute;
+            width: $heightBall4;
+            height: $heightBall4;
+            top: $myWorkBall4Top;
+            left: 540px;
+            border-radius: 50%;
+            background: radial-gradient(74.22% 74.22% at 19.79% 22.42%,
+                    #5988FF 6.25%, #5988FF 51.56%, #0043F0 100%);
+        }
+
+        >.ball5 {
+            $heightBall5: 183px;
+            position: absolute;
+            width: $heightBall5;
+            height: $heightBall5;
+            top: $myWorkBall5Top;
+            left: 1134px;
+            border-radius: 50%;
+            background: radial-gradient(74.22% 74.22% at 19.79% 22.42%,
+                    #5988FF 6.25%, #5988FF 51.56%, #0043F0 100%);
+        }
     }
+
+    >.myWorkMain {
+        border: 1px solid red;
+        position: absolute;
+        box-sizing: border-box;
+        width: 1879px;
+        top: $myWorkMainTop;
+        height: $myWorkMainHeight;
+        left: 50%;
+        transform: translate(-50%, 0%);
+        background-color: transparent;
+
+        >.ball6 {
+            $widthBall6: 393.32px;
+            position: relative;
+            width: $widthBall6;
+            height: $widthBall6;
+            top: calc(177px);
+            left: 0px;
+            rotate: 81.57deg;
+            border-radius: 50%;
+            background: radial-gradient(74.22% 74.22% at 19.79% 22.42%,
+                    #5988FF 6.25%, #5988FF 51.56%, #0043F0 100%);
+        }
+
+        >.ball7 {
+            $topBall7: calc(462px);
+            $leftBall7: calc(1138px);
+            $widthBall7: 652.16px;
+            position: absolute;
+            width: $widthBall7;
+            height: $widthBall7;
+            top: $topBall7;
+            left: $leftBall7;
+            rotate: 81.57deg;
+            border-radius: 50%;
+            background: radial-gradient(74.22% 74.22% at 19.79% 22.42%,
+                    #5988FF 6.25%, #5988FF 51.56%, #0043F0 100%);
+        }
+
+        >.ball8 {
+            $widthBall8: 51px;
+            $topBall8: calc(910px);
+            $leftBall8: calc(323px);
+            position: absolute;
+            width: $widthBall8;
+            height: $widthBall8;
+            top: $topBall8;
+            left: $leftBall8;
+            rotate: 0deg;
+            border-radius: 50%;
+            background: radial-gradient(74.22% 74.22% at 19.79% 22.42%,
+                    #5988FF 6.25%, #5988FF 51.56%, #0043F0 100%);
+        }
+
+        >.ball9 {
+            $widthBall9: 238.84px;
+            $topBall9: calc(1351px);
+            $leftBall9: calc(354px);
+            position: absolute;
+            width: $widthBall9;
+            height: $widthBall9;
+            top: $topBall9;
+            left: $leftBall9;
+            rotate: 81.57deg;
+            border-radius: 50%;
+            background: radial-gradient(74.22% 74.22% at 19.79% 22.42%,
+                    #5988FF 6.25%, #5988FF 51.56%, #0043F0 100%);
+        }
+
+        >.ball10 {
+            $widthBall10: 98px;
+            $topBall10: calc(1742px);
+            $leftBall10: calc(1524px);
+            position: absolute;
+            width: $widthBall10;
+            height: $widthBall10;
+            top: $topBall10;
+            left: $leftBall10;
+            rotate: 0deg;
+            border-radius: 50%;
+            background: radial-gradient(74.22% 74.22% at 19.79% 22.42%,
+                    #5988FF 6.25%, #5988FF 51.56%, #0043F0 100%);
+        }
+    }
+}
