my work header completed

--- a/src/app/mywork/mywork.html
+++ b/src/app/mywork/mywork.html
@@ -2,6 +2,8 @@
     <div class="myWorkHeader">
         <div class="ball4"></div>
         <div class="ball5"></div>
+        <div class="myWorkHeaderTitle">{{ myData.DATA.myWork.title.values[myData.DATA.language] }}</div>
+        <div class="myWorkHeaderText">{{ myData.DATA.myWork.text.values[myData.DATA.language] }}</div>
     </div>
     <div class="myWorkMain">
         <div class="ball6"></div>
