--- a/src/app/mywork/mywork.html
+++ b/src/app/mywork/mywork.html
@@ -2,8 +2,8 @@
     <div class="myWorkHeader">
         <div class="ball4"></div>
         <div class="ball5"></div>
-        <div class="myWorkHeaderTitle">{{ myData.DATA.myWork.title.values[myData.DATA.language] }}</div>
-        <div class="myWorkHeaderText">{{ myData.DATA.myWork.text.values[myData.DATA.language] }}</div>
+        <div class="myWorkHeaderTitle">{{ myData.DATA.myWork.title[myData.DATA.language] }}</div>
+        <div class="myWorkHeaderText">{{ myData.DATA.myWork.text[myData.DATA.language] }}</div>
     </div>
     <div class="myWorkMain">
         <div class="ball6"></div>
@@ -11,7 +11,27 @@
         <div class="ball8"></div>
         <div class="ball9"></div>
         <div class="ball10"></div>
+
+        <div class="myWorkProjects">
+            <div *ngFor="let project of myData.DATA.myWork.projects; let i=index">
+                <div class="myWorkProject {{ i % 2 === 0 ? '' : 'directionReverse' }}">
+
+                    <div class="myWorkProjectImage">
+                        <img [src]="'img/' + project.image" alt="project image">
+                    </div>
+                    <div class="myWorkProjectContent">
+                        <div class="myWorkProjectTitle">{{ project.title[myData.DATA.language] }}</div>
+                        <div class="myWorkProjectUsed">
+                            <span *ngFor="let tech of project.used; let isLast = last">
+                                {{ tech }}{{ isLast ? '' : '|' }}<span *ngIf="!isLast">, </span>
+                            </span>
+                        </div>
+                        <div class="myWorkProjectDescription">{{ project.description[myData.DATA.language] }}</div>
+                        <a class="myWorkProjectLink" [href]="project.link" target="_blank">{{ project.link }}</a>
+                    </div>
+
+
+                </div>
+            </div>
+        </div>
     </div>
-
-
-</div>
