--- a/src/app/mywork/mywork.scss
+++ b/src/app/mywork/mywork.scss
@@ -50,7 +50,7 @@ $myWorkHeight: calc($myWorkHeaderHeight + $myWorkMainHeight);
         background-color: transparent;
 
         >.myWorkHeaderTitle {
-            border: 1px solid blue;
+            //border: 1px solid blue;
             position: absolute;
             box-sizing: border-box;
             width: 378px;
@@ -66,7 +66,7 @@ $myWorkHeight: calc($myWorkHeaderHeight + $myWorkMainHeight);
         }
 
         >.myWorkHeaderText {
-            border: 1px solid blue;
+            //border: 1px solid blue;
             position: absolute;
             box-sizing: border-box;
             width: 673px;
@@ -109,7 +109,7 @@ $myWorkHeight: calc($myWorkHeaderHeight + $myWorkMainHeight);
     >.myWorkMain {
         $myWorkMainWidth: 1879px;
         $myWorkMainLeft: -246px;
-        border: 1px solid red;
+        //border: 1px solid red;
         position: absolute;
         box-sizing: border-box;
         width: $myWorkMainWidth;
@@ -190,5 +190,90 @@ $myWorkHeight: calc($myWorkHeaderHeight + $myWorkMainHeight);
             background: radial-gradient(74.22% 74.22% at 19.79% 22.42%,
                     #5988FF 6.25%, #5988FF 51.56%, #0043F0 100%);
         }
+
+
+        >.myWorkProjects {
+            border: 1px solid green;
+            position: absolute;
+            box-sizing: border-box;
+            top: 0px;
+            left: 0px;
+            height: 100%;
+            width: 100%;
+            background-color: transparent;
+            display: flex;
+            flex-direction: column;
+            gap: 70px;
+            z-index: 2;
+
+        }
+
+        .myWorkProject {
+            border: 1px solid orange;
+            position: relative;
+            box-sizing: border-box;
+            background-color: transparent;
+            width: 100%;
+            display: flex;
+            gap: 35px;
+
+            >.myWorkProjectImage {
+                border: 1px solid purple;
+                position: relative;
+                box-sizing: border-box;
+                width: 720px;
+                height: 460px;
+                top: -67px;
+                left: 273px;
+                gap: 10px;
+                background-color: transparent;
+                display: flex;
+                align-items: end;
+                justify-content: center;
+                box-shadow: 5px 5px 15px 0px #00000026;
+
+                &:hover {
+                    transition: all 3.3s ease-in-out;
+                    align-items: start;
+
+                    >img {
+                        cursor: pointer;
+                        width: 670px;
+                        height: 425px;
+                        gap: 10px;
+
+
+                    }
+
+
+                }
+
+
+            }
+
+
+            >.myWorkProjectContent {
+                border: 1px solid pink;
+                position: relative;
+                box-sizing: border-box;
+                width: 536px;
+                height: 339px;
+                top: 52px;
+                left: 273px;
+                background-color: transparent;
+                display: flex;
+                flex-direction: column;
+                row-gap: 15px;
+                padding-bottom: 20px;
+            }
+
+
+
+        }
     }
+}
+
+.directionReverse {
+    flex-direction: row-reverse;
+    left: calc(-25% - 35px);
 }
