Need a teamplayer add

--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -1,12 +1,12 @@
 <main>
     <div class="hero">
         <div class="ball1"></div>
-        <div class="hello">{{ myData.DATA.hero.hello.values[myData.DATA.language] }}</div>
-        <div class="profession">
+        <p class="hello">{{ myData.DATA.hero.hello.values[myData.DATA.language] }}</p>
+        <h1 class="profession">
             <div class="professionPart1">{{ myData.DATA.hero.profession.values[0][myData.DATA.language] }}</div>
             <div class="professionPart2">{{ myData.DATA.hero.profession.values[1][myData.DATA.language] }}</div>
-        </div>
-        <div class="scrollText">{{ myData.DATA.hero.scroll.values[myData.DATA.language] }}</div>
+        </h1>
+        <p class="scrollText">{{ myData.DATA.hero.scroll.values[myData.DATA.language] }}</p>
         <div class="scrollLine"></div>
         <img src="img/me.png" alt="my photo" class="me" />
         <div class="mainSocialButtons">
