--- a/src/app/header/header.html
+++ b/src/app/header/header.html
@@ -2,21 +2,21 @@
     <img src="ico/AP_bgw.png" alt="Logo" class="logo" />
     <nav>
         <div class="links">
-            <div class="link"  *ngFor="let value of myData.DATA.header; let i = index">
+            <div class="link" *ngFor="let value of myData.DATA.header; let i = index">
                 <div class="button {{value.set ? ', bolder' : ''}}">
-                     <a (click)="goToSection(value.name)">{{value.values[myData.DATA.language]}}</a>
-                <div class="{{myData.DATA.header[i].set ? 'underline' : ''}}"></div>    
+                    <a (click)="goToSection(value.name)">{{value.values[myData.DATA.language]}}</a>
+                    <div class="{{myData.DATA.header[i].set ? 'underline' : ''}}"></div>
                 </div>
             </div>
         </div>
         <div class="languages">
             <div class="button {{myData.DATA.language === 1 ? ', bolder' : ''}}">
-                <a (click)="this.myData.DATA.language = 1">{{myData.DATA.languages.values[1]}}</a>
+                <p (click)="this.myData.DATA.language = 1">{{myData.DATA.languages.values[1]}}</p>
                 <div class="{{myData.DATA.language === 1 ? 'underline' : ''}}"></div>
             </div>
             /
             <div class="button {{myData.DATA.language === 0 ? ', bolder' : ''}}">
-                <a (click)="this.myData.DATA.language = 0">{{myData.DATA.languages.values[0]}}</a>
+                <p (click)="this.myData.DATA.language = 0">{{myData.DATA.languages.values[0]}}</p>
                 <div class="{{myData.DATA.language === 0 ? 'underline' : ''}}"></div>
             </div>
         </div>
