--- a/src/app/mywork/mywork.html
+++ b/src/app/mywork/mywork.html
@@ -14,22 +14,28 @@
 
         <div class="myWorkProjects">
             <div *ngFor="let project of myData.DATA.myWork.projects; let i=index">
-                <div class="myWorkProject {{ i % 2 === 0 ? '' : 'directionReverse' }}">
-
+                <div class="myWorkProject {{ i % 2 === 0 ? 'directionNormal' : 'directionReverse' }}">
                     <div class="myWorkProjectImage">
                         <img [src]="'img/' + project.image" alt="project image">
                     </div>
                     <div class="myWorkProjectContent">
-                        <div class="myWorkProjectTitle">{{ project.title[myData.DATA.language] }}</div>
-                        <div class="myWorkProjectUsed">
-                            <span *ngFor="let tech of project.used; let isLast = last">
-                                {{ tech }}{{ isLast ? '' : '|' }}<span *ngIf="!isLast">, </span>
-                            </span>
+                        <div class="myWorkProjectContentText">
+                            <div>
+                                <span class="myWorkProjectTitle">{{ project.title[myData.DATA.language] }}</span>
+                                <div class="myWorkProjectUsed">
+                                    <span *ngFor="let tech of project.used; let isLast = last">
+                                        {{ tech }}<span *ngIf="!isLast"> | </span>
+                                    </span>
+                                </div>
+                            </div>
+                            <span class="myWorkProjectDescription">{{ project.description[myData.DATA.language]
+                                }}</span>
                         </div>
-                        <div class="myWorkProjectDescription">{{ project.description[myData.DATA.language] }}</div>
-                        <a class="myWorkProjectLink" [href]="project.link" target="_blank">{{ project.link }}</a>
-                    </div>
+                        <div class="myWorkProjectContentButton">
 
+                            <a class="myWorkProjectLink" [href]="project.link" target="_blank">Github</a>
+                        </div>
+                    </div>
 
                 </div>
             </div>
