last balls added

--- a/src/app/portfolio/portfolio.html
+++ b/src/app/portfolio/portfolio.html
@@ -4,3 +4,5 @@
 <app-skillset></app-skillset>
 <app-mywork></app-mywork>
 <app-teamplayer></app-teamplayer>
+<app-contact></app-contact>
+<app-footer></app-footer>
